spacing style fix for n-column image block

--- a/article/static/article/css/blocks.less
+++ b/article/static/article/css/blocks.less
@@ -167,8 +167,7 @@
       width: auto;
       position: relative;
       display: table;
-      margin-bottom: 5px;
-      margin: 10px 7px;;
+      margin:10px 7px 30px 7px;;
       .image {
         display: table-cell;
         width: 100%;
